[package]
name = "nutype-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
claim = "0.5.0"
lazy_static = "1.4.0"
nutype = { version = "0.3.1", features = ["regex"] }
once_cell = "1.18.0"
regex = "1.8.4"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
