[workspace]
members = [
	"benchmark",
	"common",
	"dynamic-constructor-di",
	"function-di",
	"static-constructor-di",
	"constructor-di",
	"cake-pattern-di",
	"shaku-di",
	"reader-di"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.68.1"

[workspace.dependencies]
anyhow = "1"
actix-web = "4"
serde = "1.0.152"
serde_derive = "1.0.152"
