[package]
name = "static-doubly-linked-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghost-cell = { git = "https://github.com/yuk1ty/ghost-cell" }
static-rc = { git = "https://github.com/yuk1ty/static-rc" }
