[package]
name = "submillisecond-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
lunatic = "0.11.4"
ron = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
submillisecond = { version = "0.2.0-alpha1", features = ["json"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
