[package]
name = "struct-injection-with-di-container"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
async-trait.workspace = true
tokio.workspace = true
shaku = "0.6.1"
shaku_actix = "0.2.0"
